--- a/style.css
+++ b/style.css
@@ -2,16 +2,12 @@
   margin: 0x;
   padding: 5px;
   box-sizing: border-box;
-
 }
 
 body {
-  font-family: 'Times New Roman', Times, serif;
-  background: linear-gradient(to bottom, #ffffff, #6DD5FA, #2980B9);
+  font-family: "Times New Roman", Times, serif;
+  background: linear-gradient(to bottom, #ffffff, #6dd5fa, #2980b9);
   font-size: 1, 3em;
-  
-
-
 }
 
 img {
@@ -30,7 +26,6 @@ h1 {
 
 h3 {
   font-weight: bold;
-
 }
 
 header {
@@ -40,68 +35,62 @@ header {
   justify-content: center;
   padding: 2em;
 }
-.container {  
+.container {
   max-width: 1100px;
   margin: auto;
-
 }
-.card{  
+.card {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 2em;
   background-color: #2726263f;
-  
 }
 
-.card div{  
+.card div {
   padding: 2em;
-
 }
 
-.card:nth-child(even) img{
+.card:nth-child(even) img {
   order: 2;
 }
 
-.btn{ 
+.btn {
   background-color: aliceblue;
-  color:black ;
-  padding:8px 4px ;
+  color: black;
+  padding: 8px 4px;
   display: inline-block;
   border-radius: 10px;
   margin-top: 2em;
-  cursor:pointer;
-  transition: background-color 1s ease
+  cursor: pointer;
+  transition: background-color 1s ease;
 }
-a{
-  text-decoration:none;
+a {
+  text-decoration: none;
 }
-.btn:hover{
+.btn:hover {
   background-color: #03f7ff;
   color: rgb(255, 255, 255);
   box-shadow: 1px 1px 2px black;
-  
 }
-.card:hover{
+.card:hover {
   box-shadow: 1px 1px 2px black;
 }
-.galeria{
+.galeria {
   margin: 2em;
   display: flex;
   height: 50em;
   gap: 0.5em;
 }
-.galeria div{
+.galeria div {
   flex: 1;
   background-size: cover;
   background-position: top center; /*top center bottom elft rigt*/
 }
-.galeria div:hover{
+.galeria div:hover {
   flex: 2;
-  transition: all 1s cubic-bezier(.56,.01,.39,1);
+  transition: all 1s cubic-bezier(0.56, 0.01, 0.39, 1);
   box-shadow: 15px 15px 15px;
-
 }
-.galeria:hover div:not(:hover){
-  filter:blur(3px);
-
+.galeria:hover div:not(:hover) {
+  filter: blur(3px);
 }
